horizontal scroll fix

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -140,6 +140,10 @@ footer {
     height: 70px;
 }
 
+main {
+    overflow: hidden;
+}
+
 @media only screen and (max-width: 700px) {
    
     .footer {
